--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,7 +237,7 @@ h6 {
   width: 100%;
   height: 60vh;
   background: url("../img/fond-3.png") top center !important;
-  background-size: contain;
+  background-size: cover !important;
 }
 
 #hero:before {
